# compiz-plugins-community

./: .egup.branches  .egup.refs  .egup.remotes  .egup.stat  .egup.tags  LICENSE-extra.md  Makefile.am  NEWS  NEWS.md  README.md  autogen.sh  compiz-visualevent.pc.in  configure.ac
.egup.git-config/: autocrlf-origin-local-single  autocrlf-origins
.egup.stat/: AUTHORS.egup-stat  CODE_OF_CONDUCT.md.egup-stat  CONTRIBUTING.md.egup-stat  INSTALL.egup-stat  LICENSE-extra.md.egup-stat  LICENSE.md.egup-stat  Makefile.am.egup-stat  NEWS.md.egup-stat  VERSION.egup-stat  autogen.sh.egup-stat  compiz-visualevent.pc.in.egup-stat  configure.ac.egup-stat  data.egup-stat  icons.egup-stat  images.egup-stat  metadata.egup-stat  po.egup-stat
.egup.stat/data/: Makefile.am.egup-stat  headtracking.egup-stat
.egup.stat/data/headtracking/: Makefile.am.egup-stat  haarcascade_frontalface_alt2.xml.egup-stat
.egup.stat/icons/: Makefile.am.egup-stat  plugin-boing.svg.egup-stat  plugin-dclick.svg.egup-stat  plugin-dodge.svg.egup-stat  plugin-headtracking.svg.egup-stat  plugin-maze.svg.egup-stat  plugin-mousegestures.svg.egup-stat  plugin-newton.svg.egup-stat  plugin-prompt.svg.egup-stat  plugin-roach.svg.egup-stat  plugin-rubik.svg.egup-stat  plugin-visualevent.svg.egup-stat
.egup.stat/images/: Makefile.am.egup-stat  boing.egup-stat
.egup.stat/images/boing/: Makefile.am.egup-stat  ball-02.png.egup-stat  ball-08.png.egup-stat  ball-09.png.egup-stat  ball-12.png.egup-stat
.egup.stat/images/roach/: Makefile.am.egup-stat  down.png.egup-stat  down2.png.egup-stat  right2.png.egup-stat
.egup.stat/metadata/: Makefile.am.egup-stat  boing.xml.in.egup-stat  dodge.xml.in.egup-stat  headtracking.xml.in.egup-stat  lazypointer.xml.in.egup-stat  newton.xml.in.egup-stat  prompt.xml.in.egup-stat  roach.xml.in.egup-stat  visualevent.xml.in.egup-stat  wiimote.xml.in.egup-stat  wiitrack.xml.in.egup-stat  windowcapture.xml.in.egup-stat
.egup.stat/po/: ChangeLog.egup-stat  LINGUAS.egup-stat  Makevars.egup-stat  bn.po.egup-stat  compiz-plugins-community.pot.egup-stat  cs.po.egup-stat  de.po.egup-stat  el.po.egup-stat  en_GB.po.egup-stat  es.po.egup-stat  eu.po.egup-stat  fi.po.egup-stat  fr.po.egup-stat  gl.po.egup-stat  gu.po.egup-stat  he.po.egup-stat  hi.po.egup-stat  hu.po.egup-stat  it.po.egup-stat  ja.po.egup-stat  ko.po.egup-stat  nb.po.egup-stat  nl.po.egup-stat  pl.po.egup-stat  pt.po.egup-stat  pt_BR.po.egup-stat  sv.po.egup-stat  tr.po.egup-stat
.egup.stat/src/: Makefile.am.egup-stat  boing.egup-stat  desktopclick.egup-stat  dodge.egup-stat  headtracking.egup-stat  lazypointer.egup-stat  maze.egup-stat  mousegestures.egup-stat  newton.egup-stat  peek.egup-stat  prompt.egup-stat  roach.egup-stat  rubik.egup-stat  showrepaint.egup-stat  visualevent.egup-stat  wiitrack.egup-stat  windowcapture.egup-stat
.egup.stat/src/boing/: Makefile.am.egup-stat  boing.c.egup-stat
.egup.stat/src/desktopclick/: Makefile.am.egup-stat
.egup.stat/src/dodge/: Makefile.am.egup-stat
.egup.stat/src/headtracking/: compiz-wiimote.h.egup-stat  headtracking.c.egup-stat
.egup.stat/src/maze/: Makefile.am.egup-stat
.egup.stat/src/newton/: Makefile.am.egup-stat  chipmunk.c.egup-stat  cpBB.h.egup-stat  cpCollision.c.egup-stat  cpHashSet.h.egup-stat  cpSpaceHash.c.egup-stat  prime.h.egup-stat
.egup.stat/src/peek/: peek.c.egup-stat
.egup.stat/src/prompt/: prompt.c.egup-stat
.egup.stat/src/roach/: Makefile.am.egup-stat  roach.c.egup-stat
.egup.stat/src/rubik/: Makefile.am.egup-stat  rubik.c.egup-stat
.egup.stat/src/showrepaint/: showrepaint.c.egup-stat
.egup.stat/src/visualevent/: compiz-cairo.c.egup-stat
.egup.stat/src/wiimote/: Makefile.am.egup-stat  report.c.egup-stat  setupbuild.egup-stat
.egup.stat/src/wiitrack/: Makefile.am.egup-stat  wiitrack.c.egup-stat
.egup.stat/src/windowcapture/: Makefile.am.egup-stat
data/: Makefile.am
data/headtracking/: Makefile.am
data/wiimote/: Makefile.am
icons/: Makefile.am
images/: Makefile.am
images/boing/: Makefile.am
images/roach/: Makefile.am
metadata/: Makefile.am  dclick.xml.in  dodge.xml.in  flash.xml.in  headtracking.xml.in  lazypointer.xml.in  maze.xml.in  mousegestures.xml.in  newton.xml.in  peek.xml.in  prompt.xml.in  roach.xml.in  rubik.xml.in  showrepaint.xml.in  visualevent.xml.in  wiimote.xml.in  wiitrack.xml.in
po/: Makevars  POTFILES.in  ar.po  bn.po  ca.po  compiz-plugins-community.pot  cs.po  de.po  el.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hu.po  it.po  ja.po  ko.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sv.po  tr.po  zh_CN.po
src/: Makefile.am
src/desktopclick/: Makefile.am  dclick.c
src/dodge/: Makefile.am  dodge.c
src/flash/: Makefile.am  flash.c
src/headtracking/: Makefile  Makefile.am  facedetect.c  facedetect.h  headtracking.c  plugin.info
src/lazypointer/: Makefile.am  lazypointer.c
src/maze/: Makefile.am  maze.c
src/mousegestures/: Makefile.am  mousegestures.c
src/newton/: Makefile.am  chipmunk.h  newton.c
src/peek/: Makefile.am  peek.c  setupbuild
src/prompt/: Makefile.am  prompt.c
src/roach/: roach.c
src/rubik/: Makefile.am  rubik-internal.h  rubik.c  util.c
src/showrepaint/: Makefile.am  showrepaint.c
src/visualevent/: Makefile.am  compiz-cairo.c  compiz-cairo.h  visualevent.c
src/wiimote/: Makefile.am  action.c  callback.c  communicate.c  compiz-wiimote.h  connect.c  gesture.c  option.c  report.c  util.c  wiimote-internal.h  wiimote.c
src/wiitrack/: Makefile.am  compiz-wiimote.h  plugin.info  wiitrack.c
src/windowcapture/: Makefile.am
