iconsdir = $(pluginiconsdir)
icons_DATA =              \
  plugin-boing.svg        \
  plugin-dclick.svg       \
  plugin-flash.svg        \
  plugin-headtracking.svg \
  plugin-maze.svg         \
  plugin-lazypointer.svg  \
  plugin-newton.svg       \
  plugin-peek.svg         \
  plugin-prompt.svg       \
  plugin-roach.svg        \
  plugin-rubik.svg        \
  plugin-visualevent.svg  \
  plugin-wiimote.svg      \
  plugin-wiitrack.svg
