## Process this file with automake to produce Makefile.in
##	wiimote            \

SUBDIRS =              \
	boing              \
	desktopclick       \
	flash              \
	headtracking       \
	lazypointer        \
	maze               \
	mousegestures      \
	newton             \
	peek               \
	prompt             \
	roach              \
	rubik              \
	visualevent        \
	wiitrack
