## Process this file with automake to produce Makefile.in
##	wiimote            \
##	prompt             \

SUBDIRS =              \
	boing              \
	desktopclick       \
	flash              \
	headtracking       \
	lazypointer        \
	maze               \
	mousegestures      \
	newton             \
	peek               \
	roach              \
	rubik              \
	showrepaint        \
	visualevent        \
	wiitrack
