## Process this file with automake to produce Makefile.in

SUBDIRS =                 \
	boing              \
	desktopclick       \
	dodge              \
	flash              \
	headtracking       \
	lazypointer        \
	maze               \
	mousegestures      \
	newton             \
	peek               \
	prompt             \
	roach              \
	rubik              \
	showrepaint        \
	visualevent        \
	wiimote            \
	wiitrack           \
	windowcapture
